Inspector: Don't fire assert when inspecting an empty db https://bugs.webkit.org/show_bug.cgi?id=99370

Reviewed by Vsevolod Vlasov.

* inspector/InspectorIndexedDBAgent.cpp:
(WebCore):


Canonical link: https://commits.webkit.org/117473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131511 268f45cc-cd09-0410-ab3c-d52691b4dbfc